docs/0.0.0.0/_sources/gallery/tabulated/plot_polyethylene.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tabulated/plot_polyethylene.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_tabulated_plot_polyethylene.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tabulated_plot_polyethylene.py:


Plot the Refractive Index of Optical Material: Polyethylene
=========================================================

This module demonstrates the usage of the PyOptik library to calculate and plot the refractive index of polyethylene over a specified range of wavelengths.

.. GENERATED FROM PYTHON SOURCE LINES 10-22



.. image-sg:: /gallery/tabulated/images/sphx_glr_plot_polyethylene_001.png
   :alt: Refractive Index and Absorption vs. Wavelength [polyetylene]
   :srcset: /gallery/tabulated/images/sphx_glr_plot_polyethylene_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 1.31 micrometer to 1.55 micrometer which is outside the allowable range of 40.0 micrometer to 200.0 micrometer µm. [Material: polyetylene]
      warnings.warn(






|

.. code-block:: Python

    from TypedUnit import ureg

    from PyOptik import MaterialBank

    # Initialize the material with the Sellmeier model
    material = MaterialBank.polyetylene

    # Calculate refractive index at specific wavelengths
    RI = material.compute_refractive_index(wavelength=[1310, 1550] * ureg.nanometer)

    # Display calculated refractive indices at sample wavelengths
    material.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.396 seconds)


.. _sphx_glr_download_gallery_tabulated_plot_polyethylene.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_polyethylene.ipynb <plot_polyethylene.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_polyethylene.py <plot_polyethylene.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
